fix clicking on iOS

--- a/src/main/resources/static/css/base.css
+++ b/src/main/resources/static/css/base.css
@@ -5,3 +5,7 @@
   right: 24px;
   z-index: 998;
 }
+
+.ios-tappable {
+  cursor: pointer;
+}
